--- a/src/styles.less
+++ b/src/styles.less
@@ -110,13 +110,6 @@
     0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
-.insert-buttons-container{
-  .horizontal-container;
-  float:right;
-}
-
-
-
 // ITEMY
 
 .label-element{
@@ -177,6 +170,13 @@
 .horizontal-container{
   display: flex;
   flex-direction: row;
+  padding: 0;
+  margin: 0;
+}
+
+.vertical-container{
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
 }
