--- a/src/app/tasks/details-container/details-container.component.html
+++ b/src/app/tasks/details-container/details-container.component.html
@@ -1,4 +1,4 @@
-<div class="app-panel shadow details">
+<div class="container-view details">
   <div>
     <button class="close-button" (click)="closeDetails()">X</button>
   </div>
