--- a/src/app/tasks/tasks-container/tasks-container.component.html
+++ b/src/app/tasks/tasks-container/tasks-container.component.html
@@ -1,4 +1,4 @@
-<div class="tasks-container">
+<div class="container-view">
   <div class="tasks-header">
     <span class="project-name">{{ getProjectName() }}</span>
     <span class="mode-buttons">
