--- a/src/app/tasks/tasks-container/tasks/tasks.component.html
+++ b/src/app/tasks/tasks-container/tasks/tasks.component.html
@@ -1,4 +1,4 @@
-<div class="tasks-view" *ngIf="getModel().isOpen()">
+<div class="vertical-container" *ngIf="getModel().isOpen()">
   <div class="horizontal-container">
     <input
       id="task-filter"
